{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 324,
  "lineage": "9a1d08d5-68ac-afba-d1b6-912b4fec7cc9",
  "resources": [
    {
      "module": "module.Ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "projectec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-026b57f3c383c2eec",
            "arn": "arn:aws:ec2:us-east-1:913213447178:instance/i-02b1503ac8b71e065",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02b1503ac8b71e065",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b869199b8ba2b6fc",
            "private_dns": "ip-10-0-1-216.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.216",
            "public_ip": "54.221.46.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04a60c0a90c2a43b9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de4c9271a0782408",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-069f95f969f592a5b"
            ]
          },
          "dependencies": [
            "module.VPC.aws_security_group.projectVPCsg",
            "module.VPC.aws_subnet.pubsub",
            "module.VPC.aws_vpc.projectVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-026b57f3c383c2eec",
            "arn": "arn:aws:ec2:us-east-1:913213447178:instance/i-09d2819e64dc28588",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d2819e64dc28588",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-000006b7d423a75c6",
            "private_dns": "ip-10-0-2-112.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.112",
            "public_ip": "3.89.192.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-014f1097b4d01b629",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0954da7d69c96f454",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-069f95f969f592a5b"
            ]
          },
          "dependencies": [
            "module.VPC.aws_security_group.projectVPCsg",
            "module.VPC.aws_subnet.pubsub",
            "module.VPC.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.LoadBalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "projectLB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:913213447178:loadbalancer/app/projectLB/e063778977a2a955",
            "arn_suffix": "app/projectLB/e063778977a2a955",
            "desync_mitigation_mode": "defensive",
            "dns_name": "projectLB-541106090.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:913213447178:loadbalancer/app/projectLB/e063778977a2a955",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "projectLB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-064679870810a60ba"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0954da7d69c96f454"
              },
              {
                "subnet_id": "subnet-0de4c9271a0782408"
              }
            ],
            "subnets": [
              "subnet-0954da7d69c96f454",
              "subnet-0de4c9271a0782408"
            ],
            "vpc_id": "vpc-005c4ed9795d429ca",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.LoadBalancer.aws_security_group.albsecurity",
            "module.VPC.aws_security_group.projectVPCsg",
            "module.VPC.aws_subnet.pubsub",
            "module.VPC.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.LoadBalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "projectlistener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:913213447178:listener/app/projectLB/e063778977a2a955/3662465138914d8a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:913213447178:targetgroup/projectTARGETgroup/a274e744fa04ef17",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:913213447178:listener/app/projectLB/e063778977a2a955/3662465138914d8a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:913213447178:loadbalancer/app/projectLB/e063778977a2a955",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.LoadBalancer.aws_lb.projectLB",
            "module.LoadBalancer.aws_lb_target_group.projectTARGETgroup",
            "module.LoadBalancer.aws_security_group.albsecurity",
            "module.VPC.aws_security_group.projectVPCsg",
            "module.VPC.aws_subnet.pubsub",
            "module.VPC.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.LoadBalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "projectTARGETgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:913213447178:targetgroup/projectTARGETgroup/a274e744fa04ef17",
            "arn_suffix": "targetgroup/projectTARGETgroup/a274e744fa04ef17",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:913213447178:targetgroup/projectTARGETgroup/a274e744fa04ef17",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "projectTARGETgroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-005c4ed9795d429ca"
          },
          "dependencies": [
            "module.VPC.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.LoadBalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "projectattach1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:913213447178:targetgroup/projectTARGETgroup/a274e744fa04ef17-20221006235046543600000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:913213447178:targetgroup/projectTARGETgroup/a274e744fa04ef17",
            "target_id": "i-02b1503ac8b71e065"
          },
          "dependencies": [
            "module.Ec2.aws_instance.projectec2",
            "module.LoadBalancer.aws_lb_target_group.projectTARGETgroup",
            "module.VPC.aws_security_group.projectVPCsg",
            "module.VPC.aws_subnet.pubsub",
            "module.VPC.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.LoadBalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "projectattach2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:913213447178:targetgroup/projectTARGETgroup/a274e744fa04ef17-20221006235046628800000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:913213447178:targetgroup/projectTARGETgroup/a274e744fa04ef17",
            "target_id": "i-09d2819e64dc28588"
          },
          "dependencies": [
            "module.Ec2.aws_instance.projectec2",
            "module.LoadBalancer.aws_lb_target_group.projectTARGETgroup",
            "module.VPC.aws_security_group.projectVPCsg",
            "module.VPC.aws_subnet.pubsub",
            "module.VPC.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.LoadBalancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "albsecurity",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913213447178:security-group/sg-064679870810a60ba",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-069f95f969f592a5b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-064679870810a60ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "albsecurity",
            "name_prefix": "",
            "owner_id": "913213447178",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-005c4ed9795d429ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_security_group.projectVPCsg",
            "module.VPC.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "projectgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913213447178:internet-gateway/igw-012420635c0b935f9",
            "id": "igw-012420635c0b935f9",
            "owner_id": "913213447178",
            "vpc_id": "vpc-005c4ed9795d429ca"
          },
          "dependencies": [
            "module.VPC.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913213447178:route-table/rtb-0f91f451e20dd589b",
            "id": "rtb-0f91f451e20dd589b",
            "owner_id": "913213447178",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-012420635c0b935f9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-005c4ed9795d429ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.projectgateway",
            "module.VPC.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913213447178:route-table/rtb-094a29cf6e7f7e055",
            "id": "rtb-094a29cf6e7f7e055",
            "owner_id": "913213447178",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-012420635c0b935f9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-005c4ed9795d429ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.projectgateway",
            "module.VPC.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001a4b82a098c68b8",
            "route_table_id": "rtb-0f91f451e20dd589b",
            "subnet_id": "subnet-08e790eb77eae60da"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.projectgateway",
            "module.VPC.aws_route_table.privateroute",
            "module.VPC.aws_subnet.privsub",
            "module.VPC.aws_vpc.projectVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0474dc6cb154f1588",
            "route_table_id": "rtb-0f91f451e20dd589b",
            "subnet_id": "subnet-01b0f7456212683bf"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.projectgateway",
            "module.VPC.aws_route_table.privateroute",
            "module.VPC.aws_subnet.privsub",
            "module.VPC.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aeffe8b14fd41cd0",
            "route_table_id": "rtb-094a29cf6e7f7e055",
            "subnet_id": "subnet-0de4c9271a0782408"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.projectgateway",
            "module.VPC.aws_route_table.publicroute",
            "module.VPC.aws_subnet.pubsub",
            "module.VPC.aws_vpc.projectVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c24d4eaa6e5e86f7",
            "route_table_id": "rtb-094a29cf6e7f7e055",
            "subnet_id": "subnet-0954da7d69c96f454"
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.projectgateway",
            "module.VPC.aws_route_table.publicroute",
            "module.VPC.aws_subnet.pubsub",
            "module.VPC.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "databasesecgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913213447178:security-group/sg-01b1fe6b30b7d5862",
            "description": "Inbound from app tier",
            "egress": [],
            "id": "sg-01b1fe6b30b7d5862",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-069f95f969f592a5b"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "databasesecgroup",
            "name_prefix": "",
            "owner_id": "913213447178",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-005c4ed9795d429ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_security_group.projectVPCsg",
            "module.VPC.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "projectVPCsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913213447178:security-group/sg-069f95f969f592a5b",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069f95f969f592a5b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "projectVPCsg",
            "name_prefix": "",
            "owner_id": "913213447178",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-005c4ed9795d429ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913213447178:subnet/subnet-08e790eb77eae60da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e790eb77eae60da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "913213447178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Private": "True"
            },
            "tags_all": {
              "Private": "True"
            },
            "vpc_id": "vpc-005c4ed9795d429ca"
          },
          "dependencies": [
            "module.VPC.aws_vpc.projectVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913213447178:subnet/subnet-01b0f7456212683bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b0f7456212683bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "913213447178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Private": "True"
            },
            "tags_all": {
              "Private": "True"
            },
            "vpc_id": "vpc-005c4ed9795d429ca"
          },
          "dependencies": [
            "module.VPC.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913213447178:subnet/subnet-0de4c9271a0782408",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de4c9271a0782408",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "913213447178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-005c4ed9795d429ca"
          },
          "dependencies": [
            "module.VPC.aws_vpc.projectVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913213447178:subnet/subnet-0954da7d69c96f454",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0954da7d69c96f454",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "913213447178",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-005c4ed9795d429ca"
          },
          "dependencies": [
            "module.VPC.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "projectVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913213447178:vpc/vpc-005c4ed9795d429ca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04fbcbfc984bc9114",
            "default_route_table_id": "rtb-0ad7417961b44df59",
            "default_security_group_id": "sg-03c0fddc242dad77f",
            "dhcp_options_id": "dopt-0f9cc317b1fc963ce",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-005c4ed9795d429ca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ad7417961b44df59",
            "owner_id": "913213447178"
          }
        }
      ]
    }
  ]
}